crates/otio-capi/include/otio.h


typedef enum OtioStatus {
    OTIO_STATUS_OK = 0,
    OTIO_STATUS_NULL_POINTER = 1,
    OTIO_STATUS_INVALID_UTF8 = 2,
    OTIO_STATUS_NO_VALUE = 3,
    OTIO_STATUS_STALE_HANDLE = 4,
    OTIO_STATUS_INVALID_ARGUMENT = 5,
    OTIO_STATUS_CORE_ERROR = 6,
    OTIO_STATUS_TIME_ERROR = 7,
    OTIO_STATUS_PARSE_ERROR = 8,
    OTIO_STATUS_UNSUPPORTED = 9,
    OTIO_STATUS_IO_ERROR = 10,
    OTIO_STATUS_PANIC = 11
} OtioStatus;
typedef struct OtioBuffer {
    char *data;
    size_t len;
} OtioBuffer;
typedef struct OtioRationalTime {
    double value;
    double rate;
} OtioRationalTime;
typedef struct OtioTimeRange {
    OtioRationalTime start_time;
    OtioRationalTime duration;
} OtioTimeRange;
typedef struct OtioTimeTransform {
    OtioRationalTime offset;
    double scale;
    double rate;
} OtioTimeTransform;
typedef struct OtioColor {
    double r;
    double g;
    double b;
    double a;
} OtioColor;
typedef struct OtioV2d {
    double x;
    double y;
} OtioV2d;
typedef struct OtioBox2d {
    OtioV2d min;
    OtioV2d max;
} OtioBox2d;
typedef struct OtioDocument OtioDocument;
typedef struct OtioNode {
    uint32_t index;
    uint32_t generation;
} OtioNode;
typedef struct OtioImageSequence {
    int64_t start_frame;
    int64_t frame_step;
    double rate;
    int64_t frame_zero_padding;
    OtioMissingFramePolicy missing_frame_policy;
} OtioImageSequence;
typedef enum OtioValueKind {
    OTIO_VALUE_NULL = 0,
    OTIO_VALUE_BOOL = 1,
    OTIO_VALUE_INT = 2,
    OTIO_VALUE_UINT = 3,
    OTIO_VALUE_DOUBLE = 4,
    OTIO_VALUE_STRING = 5,
    OTIO_VALUE_RATIONAL_TIME = 6,
    OTIO_VALUE_TIME_RANGE = 7,
    OTIO_VALUE_TIME_TRANSFORM = 8,
    OTIO_VALUE_COLOR = 9,
    OTIO_VALUE_V2D = 10,
    OTIO_VALUE_BOX2D = 11,
    OTIO_VALUE_VECTOR = 12,
    OTIO_VALUE_DICTIONARY = 13,
    OTIO_VALUE_OBJECT = 14,
    OTIO_VALUE_OTHER = 15
} OtioValueKind;
const char *otio_status_name(OtioStatus status);
const char *otio_version(void);
void otio_buffer_free(OtioBuffer buffer);
bool otio_node_is_none(OtioNode node);
bool otio_node_equal(OtioNode left, OtioNode right);
size_t otio_default_indent(void);
OtioStatus otio_item_new(OtioDocument *target, const char *name, OtioNode *out_node);
OtioStatus otio_marker_new(
    OtioDocument *target,
    const char *name,
    OtioTimeRange marked_range,
    OtioNode *out_node);
OtioStatus otio_linear_time_warp_new(
    OtioDocument *target,
    const char *name,
    double time_scalar,
    OtioNode *out_node);
OtioStatus otio_missing_reference_new(
    OtioDocument *target,
    const char *name,
    OtioNode *out_node);
OtioStatus otio_item_source_range(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioTimeRange *out_range);
OtioStatus otio_item_set_source_range(
    OtioDocument *target,
    OtioNode node_handle,
    OtioTimeRange range);
OtioStatus otio_item_clear_source_range(OtioDocument *target, OtioNode node_handle);
OtioStatus otio_item_enabled(
    const OtioDocument *source,
    OtioNode node_handle,
    bool *out_enabled);
OtioStatus otio_item_set_enabled(
    OtioDocument *target,
    OtioNode node_handle,
    bool enabled);
OtioStatus otio_item_color(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioColor *out_color,
    OtioBuffer *out_name);
OtioStatus otio_item_set_color(
    OtioDocument *target,
    OtioNode node_handle,
    OtioColor color,
    const char *name);
OtioStatus otio_item_clear_color(OtioDocument *target, OtioNode node_handle);
OtioStatus otio_item_marker_count(
    const OtioDocument *source,
    OtioNode node_handle,
    size_t *out_count);
OtioStatus otio_item_marker_at(
    const OtioDocument *source,
    OtioNode node_handle,
    size_t index,
    OtioNode *out_marker);
OtioStatus otio_item_append_marker(
    OtioDocument *target,
    OtioNode node_handle,
    OtioNode marker_handle);
OtioStatus otio_item_remove_marker(
    OtioDocument *target,
    OtioNode node_handle,
    size_t index,
    OtioNode *out_marker);
OtioStatus otio_item_effect_count(
    const OtioDocument *source,
    OtioNode node_handle,
    size_t *out_count);
OtioStatus otio_item_effect_at(
    const OtioDocument *source,
    OtioNode node_handle,
    size_t index,
    OtioNode *out_effect);
OtioStatus otio_item_append_effect(
    OtioDocument *target,
    OtioNode node_handle,
    OtioNode effect_handle);
OtioStatus otio_item_remove_effect(
    OtioDocument *target,
    OtioNode node_handle,
    size_t index,
    OtioNode *out_effect);
OtioStatus otio_marker_marked_range(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioTimeRange *out_range);
OtioStatus otio_marker_set_marked_range(
    OtioDocument *target,
    OtioNode node_handle,
    OtioTimeRange range);
OtioStatus otio_marker_comment(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_comment);
OtioStatus otio_marker_set_comment(
    OtioDocument *target,
    OtioNode node_handle,
    const char *comment);
OtioStatus otio_marker_color(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioColor *out_color,
    OtioBuffer *out_name);
OtioStatus otio_marker_set_color(
    OtioDocument *target,
    OtioNode node_handle,
    OtioColor color,
    const char *name);
OtioStatus otio_media_reference_available_range(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioTimeRange *out_range);
OtioStatus otio_media_reference_set_available_range(
    OtioDocument *target,
    OtioNode node_handle,
    OtioTimeRange range);
OtioStatus otio_media_reference_clear_available_range(
    OtioDocument *target,
    OtioNode node_handle);
OtioStatus otio_media_reference_available_image_bounds(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBox2d *out_bounds);
OtioStatus otio_media_reference_set_available_image_bounds(
    OtioDocument *target,
    OtioNode node_handle,
    OtioBox2d bounds);
OtioStatus otio_media_reference_clear_available_image_bounds(
    OtioDocument *target,
    OtioNode node_handle);
OtioStatus otio_image_sequence_reference_set_numbers(
    OtioDocument *target,
    OtioNode node_handle,
    OtioImageSequence numbers);
OtioStatus otio_image_sequence_reference_target_url_base(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_url_base);
OtioStatus otio_image_sequence_reference_set_target_url_base(
    OtioDocument *target,
    OtioNode node_handle,
    const char *url_base);
OtioStatus otio_image_sequence_reference_set_name_suffix(
    OtioDocument *target,
    OtioNode node_handle,
    const char *suffix);
OtioStatus otio_metadata_kind(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    OtioValueKind *out_kind);
OtioStatus otio_metadata_contains(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    bool *out_contains);
OtioStatus otio_metadata_len(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    size_t *out_len);
OtioStatus otio_metadata_key_at(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    size_t index,
    OtioBuffer *out_key);
OtioStatus otio_metadata_get_bool(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    bool *out_value);
OtioStatus otio_metadata_get_int(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    int64_t *out_value);
OtioStatus otio_metadata_get_uint(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    uint64_t *out_value);
OtioStatus otio_metadata_get_double(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    double *out_value);
OtioStatus otio_metadata_get_rational_time(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    OtioRationalTime *out_value);
OtioStatus otio_metadata_get_time_range(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    OtioTimeRange *out_value);
OtioStatus otio_metadata_get_time_transform(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    OtioTimeTransform *out_value);
OtioStatus otio_metadata_get_v2d(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    OtioV2d *out_value);
OtioStatus otio_metadata_get_box2d(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    OtioBox2d *out_value);
OtioStatus otio_metadata_get_object(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    OtioNode *out_value);
OtioStatus otio_metadata_get_string(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    OtioBuffer *out_value);
OtioStatus otio_metadata_get_color(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *path,
    OtioColor *out_value,
    OtioBuffer *out_name);
OtioStatus otio_metadata_set_bool(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    bool value);
OtioStatus otio_metadata_set_int(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    int64_t value);
OtioStatus otio_metadata_set_uint(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    uint64_t value);
OtioStatus otio_metadata_set_double(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    double value);
OtioStatus otio_metadata_set_rational_time(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    OtioRationalTime value);
OtioStatus otio_metadata_set_time_range(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    OtioTimeRange value);
OtioStatus otio_metadata_set_time_transform(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    OtioTimeTransform value);
OtioStatus otio_metadata_set_v2d(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    OtioV2d value);
OtioStatus otio_metadata_set_box2d(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    OtioBox2d value);
OtioStatus otio_metadata_set_object(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    OtioNode value);
OtioStatus otio_metadata_set_string(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    const char *value);
OtioStatus otio_metadata_set_color(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    OtioColor value,
    const char *name);
OtioStatus otio_metadata_set_null(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path);
OtioStatus otio_metadata_set_dictionary(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path);
OtioStatus otio_metadata_set_vector(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path,
    size_t len);
OtioStatus otio_metadata_remove(
    OtioDocument *target,
    OtioNode node_handle,
    const char *path);
OtioStatus otio_metadata_clear(OtioDocument *target, OtioNode node_handle);
OtioStatus otio_node_child_count(
    const OtioDocument *source,
    OtioNode parent,
    size_t *out_count);
OtioStatus otio_node_child_at(
    const OtioDocument *source,
    OtioNode parent,
    size_t index,
    OtioNode *out_child);
OtioStatus otio_node_children(
    const OtioDocument *source,
    OtioNode parent,
    OtioNode *out_nodes,
    size_t capacity,
    size_t *out_count);
OtioStatus otio_node_highest_ancestor(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioNode *out_ancestor);
OtioStatus otio_node_find_clips(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioNode *out_nodes,
    size_t capacity,
    size_t *out_count);
OtioStatus otio_item_duration(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioRationalTime *out_duration);
OtioStatus otio_item_available_range(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioTimeRange *out_range);
OtioStatus otio_item_trimmed_range(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioTimeRange *out_range);
OtioStatus otio_item_visible_range(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioTimeRange *out_range);
OtioStatus otio_item_range_in_parent(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioTimeRange *out_range);
OtioStatus otio_item_trimmed_range_in_parent(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioTimeRange *out_range);
double otio_default_epsilon_s(void);