sdk/zig/src/c.zig

pub extern fn otio_image_sequence_reference_set_name_suffix(target: *Document, node_handle: NodeHandle, suffix: [*:0]const u8, out_error: ?*Buffer) Status;
pub extern fn otio_image_sequence_reference_set_numbers(target: *Document, node_handle: NodeHandle, numbers: ImageSequence, out_error: ?*Buffer) Status;
pub extern fn otio_image_sequence_reference_set_target_url_base(target: *Document, node_handle: NodeHandle, url_base: [*:0]const u8, out_error: ?*Buffer) Status;
pub extern fn otio_image_sequence_reference_target_url_base(source: *Document, node_handle: NodeHandle, out_url_base: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_item_append_effect(target: *Document, node_handle: NodeHandle, effect_handle: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_item_append_marker(target: *Document, node_handle: NodeHandle, marker_handle: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_item_available_range(source: *Document, node_handle: NodeHandle, out_range: *TimeRange, out_error: ?*Buffer) Status;
pub extern fn otio_item_clear_color(target: *Document, node_handle: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_item_clear_source_range(target: *Document, node_handle: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_item_color(source: *Document, node_handle: NodeHandle, out_color: *Color, out_name: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_item_duration(source: *Document, node_handle: NodeHandle, out_duration: *RationalTime, out_error: ?*Buffer) Status;
pub extern fn otio_item_effect_at(source: *Document, node_handle: NodeHandle, index: usize, out_effect: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_item_effect_count(source: *Document, node_handle: NodeHandle, out_count: *usize, out_error: ?*Buffer) Status;
pub extern fn otio_item_enabled(source: *Document, node_handle: NodeHandle, out_enabled: *bool, out_error: ?*Buffer) Status;
pub extern fn otio_item_marker_at(source: *Document, node_handle: NodeHandle, index: usize, out_marker: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_item_marker_count(source: *Document, node_handle: NodeHandle, out_count: *usize, out_error: ?*Buffer) Status;
pub extern fn otio_item_new(target: *Document, name: ?[*:0]const u8, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_item_range_in_parent(source: *Document, node_handle: NodeHandle, out_range: *TimeRange, out_error: ?*Buffer) Status;
pub extern fn otio_item_remove_effect(target: *Document, node_handle: NodeHandle, index: usize, out_effect: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_item_remove_marker(target: *Document, node_handle: NodeHandle, index: usize, out_marker: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_item_set_color(target: *Document, node_handle: NodeHandle, color: Color, name: ?[*:0]const u8, out_error: ?*Buffer) Status;
pub extern fn otio_item_set_enabled(target: *Document, node_handle: NodeHandle, enabled: bool, out_error: ?*Buffer) Status;
pub extern fn otio_item_set_source_range(target: *Document, node_handle: NodeHandle, range: TimeRange, out_error: ?*Buffer) Status;
pub extern fn otio_item_source_range(source: *Document, node_handle: NodeHandle, out_range: *TimeRange, out_error: ?*Buffer) Status;
pub extern fn otio_item_trimmed_range(source: *Document, node_handle: NodeHandle, out_range: *TimeRange, out_error: ?*Buffer) Status;
pub extern fn otio_item_trimmed_range_in_parent(source: *Document, node_handle: NodeHandle, out_range: *TimeRange, out_error: ?*Buffer) Status;
pub extern fn otio_item_visible_range(source: *Document, node_handle: NodeHandle, out_range: *TimeRange, out_error: ?*Buffer) Status;
pub extern fn otio_buffer_free(buffer: Buffer) void;
pub extern fn otio_default_epsilon_s() f64;
pub extern fn otio_default_indent() usize;
pub extern fn otio_status_name(status: Status) [*:0]const u8;
pub extern fn otio_version() [*:0]const u8;
pub extern fn otio_linear_time_warp_new(target: *Document, name: ?[*:0]const u8, time_scalar: f64, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_marker_color(source: *Document, node_handle: NodeHandle, out_color: *Color, out_name: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_marker_comment(source: *Document, node_handle: NodeHandle, out_comment: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_marker_marked_range(source: *Document, node_handle: NodeHandle, out_range: *TimeRange, out_error: ?*Buffer) Status;
pub extern fn otio_marker_new(target: *Document, name: ?[*:0]const u8, marked_range: TimeRange, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_marker_set_color(target: *Document, node_handle: NodeHandle, color: Color, name: ?[*:0]const u8, out_error: ?*Buffer) Status;
pub extern fn otio_marker_set_comment(target: *Document, node_handle: NodeHandle, comment: [*:0]const u8, out_error: ?*Buffer) Status;
pub extern fn otio_marker_set_marked_range(target: *Document, node_handle: NodeHandle, range: TimeRange, out_error: ?*Buffer) Status;
pub extern fn otio_media_reference_available_image_bounds(source: *Document, node_handle: NodeHandle, out_bounds: *Box2d, out_error: ?*Buffer) Status;
pub extern fn otio_media_reference_available_range(source: *Document, node_handle: NodeHandle, out_range: *TimeRange, out_error: ?*Buffer) Status;
pub extern fn otio_media_reference_clear_available_image_bounds(target: *Document, node_handle: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_media_reference_clear_available_range(target: *Document, node_handle: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_media_reference_set_available_image_bounds(target: *Document, node_handle: NodeHandle, bounds: Box2d, out_error: ?*Buffer) Status;
pub extern fn otio_media_reference_set_available_range(target: *Document, node_handle: NodeHandle, range: TimeRange, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_clear(target: *Document, node_handle: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_contains(source: *Document, node_handle: NodeHandle, path: [*:0]const u8, out_contains: *bool, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_get_bool(source: *Document, node_handle: NodeHandle, path: [*:0]const u8, out_value: *bool, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_get_box2d(source: *Document, node_handle: NodeHandle, path: [*:0]const u8, out_value: *Box2d, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_get_color(source: *Document, node_handle: NodeHandle, path: [*:0]const u8, out_value: *Color, out_name: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_get_double(source: *Document, node_handle: NodeHandle, path: [*:0]const u8, out_value: *f64, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_get_int(source: *Document, node_handle: NodeHandle, path: [*:0]const u8, out_value: *i64, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_get_object(source: *Document, node_handle: NodeHandle, path: [*:0]const u8, out_value: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_get_rational_time(source: *Document, node_handle: NodeHandle, path: [*:0]const u8, out_value: *RationalTime, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_get_string(source: *Document, node_handle: NodeHandle, path: [*:0]const u8, out_value: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_get_time_range(source: *Document, node_handle: NodeHandle, path: [*:0]const u8, out_value: *TimeRange, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_get_time_transform(source: *Document, node_handle: NodeHandle, path: [*:0]const u8, out_value: *TimeTransform, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_get_uint(source: *Document, node_handle: NodeHandle, path: [*:0]const u8, out_value: *u64, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_get_v2d(source: *Document, node_handle: NodeHandle, path: [*:0]const u8, out_value: *V2d, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_key_at(source: *Document, node_handle: NodeHandle, path: [*:0]const u8, index: usize, out_key: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_kind(source: *Document, node_handle: NodeHandle, path: [*:0]const u8, out_kind: *ValueKind, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_len(source: *Document, node_handle: NodeHandle, path: [*:0]const u8, out_len: *usize, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_remove(target: *Document, node_handle: NodeHandle, path: [*:0]const u8, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_set_bool(target: *Document, node_handle: NodeHandle, path: [*:0]const u8, value: bool, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_set_box2d(target: *Document, node_handle: NodeHandle, path: [*:0]const u8, value: Box2d, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_set_color(target: *Document, node_handle: NodeHandle, path: [*:0]const u8, value: Color, name: ?[*:0]const u8, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_set_dictionary(target: *Document, node_handle: NodeHandle, path: [*:0]const u8, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_set_double(target: *Document, node_handle: NodeHandle, path: [*:0]const u8, value: f64, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_set_int(target: *Document, node_handle: NodeHandle, path: [*:0]const u8, value: i64, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_set_null(target: *Document, node_handle: NodeHandle, path: [*:0]const u8, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_set_object(target: *Document, node_handle: NodeHandle, path: [*:0]const u8, value: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_set_rational_time(target: *Document, node_handle: NodeHandle, path: [*:0]const u8, value: RationalTime, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_set_string(target: *Document, node_handle: NodeHandle, path: [*:0]const u8, value: [*:0]const u8, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_set_time_range(target: *Document, node_handle: NodeHandle, path: [*:0]const u8, value: TimeRange, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_set_time_transform(target: *Document, node_handle: NodeHandle, path: [*:0]const u8, value: TimeTransform, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_set_uint(target: *Document, node_handle: NodeHandle, path: [*:0]const u8, value: u64, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_set_v2d(target: *Document, node_handle: NodeHandle, path: [*:0]const u8, value: V2d, out_error: ?*Buffer) Status;
pub extern fn otio_metadata_set_vector(target: *Document, node_handle: NodeHandle, path: [*:0]const u8, len: usize, out_error: ?*Buffer) Status;
pub extern fn otio_missing_reference_new(target: *Document, name: ?[*:0]const u8, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_node_child_at(source: *Document, parent: NodeHandle, index: usize, out_child: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_node_child_count(source: *Document, parent: NodeHandle, out_count: *usize, out_error: ?*Buffer) Status;
pub extern fn otio_node_children(source: *Document, parent: NodeHandle, out_nodes: ?[*]NodeHandle, capacity: usize, out_count: *usize, out_error: ?*Buffer) Status;
pub extern fn otio_node_equal(left: NodeHandle, right: NodeHandle) bool;
pub extern fn otio_node_find_clips(source: *Document, node_handle: NodeHandle, out_nodes: ?[*]NodeHandle, capacity: usize, out_count: *usize, out_error: ?*Buffer) Status;
pub extern fn otio_node_highest_ancestor(source: *Document, node_handle: NodeHandle, out_ancestor: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_node_is_none(node: NodeHandle) bool;
